# CAPL_Linter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Event_Client.can  GEMINI.md  README.md  aic.db  debug_ast.py  dump_ast.py  dump_ast_enum.py  dump_ast_file.py  pyproject.toml  set.py  test_cli_format.can  test_corner_cases.can  test_corner_cases2.can  test_format_improvements.can
.github/workflows/: release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/capl_formatter_20260119/: plan.md
conductor/tracks/comment_handling_20260122/: plan.md
conductor/tracks/implement_initial_linting_20260116/: plan.md  spec.md
conductor/tracks/smart_vertical_spacing_20260123/: plan.md
conductor/tracks/workspace_migration_20260116/: plan.md
examples/: EnumStructTest.can  ProblematicCode.can
src/capl_analyzer/: __init__.py  autofix.py  capl_cross_reference.py  capl_linter.py  capl_symbol_extractor.py  cli.py  cross_reference.py  dependency_analyzer.py  linter.py  models.py  symbol_extractor.py
src/capl_cli/: config.py  converters.py  main.py  models.py
src/capl_formatter/: GEMINI.md  engine.py  models.py  strategies.py  utils.py
src/capl_formatter/rules/: __init__.py  base.py  block_expansion.py  comments.py  indentation.py  quotes.py  spacing.py  splitting.py  structure.py  switch.py  top_level_ordering.py  vertical_spacing.py  whitespace.py  wrapping.py
src/capl_formatter/tests_formatter/: test_comments.py  test_formatting_snapshots.py  test_golden_files.py
src/capl_linter/: GEMINI.md  registry.py
src/capl_linter/rules/: syntax_rules.py  variable_rules.py
src/capl_linter/tests_linter/: test_circular_ref.py  test_linter_golden_files.py  test_linter_snapshots.py
src/capl_linter/tests_linter/fixtures/expected/: arrow_operator.can  extern_keyword.can  function_declaration.can  global_type_definition.can  variable_outside_block.can  variables_split_lines.can
src/capl_linter/tests_linter/fixtures/input/: arrow_operator.can  extern_keyword.can  function_declaration.can  global_type_definition.can  variable_outside_block.can  variables_split_lines.can
src/capl_linter/tests_linter/snapshots/test_linter_snapshots/test_syntax_violations/: syntax_violations.txt
src/capl_linter/tests_linter/snapshots/test_linter_snapshots/test_variable_placement/: variable_placement.txt
src/capl_symbol_db/: database.py  extractor.py
src/capl_tree_sitter/: capl_patterns.py
tests/: test_capl_linter.py  test_cli.py  test_cross_references.py  test_pointer_syntax.py  test_symbol_extraction.py  test_variable_placement.py
