[project]
name = "drift"
version = "0.1.0"
description = "Static analysis and linting tools for CAPL (CANoe Programming Language)"
authors = [
    { name = "Mohamed Hamed Othman", email = "mohamedahamed1915@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["capl", "canoe", "canalyzer", "automotive", "can", "static-analysis", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "capl-tree-sitter>=0.1.0",
    "capl-symbol-db>=0.1.0",
    "capl-linter>=0.1.0",
    "capl-formatter>=0.1.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.scripts]
drift = "capl_cli.main:app"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "commitizen>=4.12.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
capl-tree-sitter = { workspace = true }
capl-symbol-db = { workspace = true }
capl-linter = { workspace = true }
capl-formatter = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capl_cli"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long 
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "packages/capl-tree-sitter/pyproject.toml:version",
    "packages/capl-symbol-db/pyproject.toml:version",
    "packages/capl-linter/pyproject.toml:version",
    "packages/capl-formatter/pyproject.toml:version",
]

[project.urls]
Homepage = "https://github.com/MohamedHamed19m/CAPL_Linter"
Documentation = "https://github.com/MohamedHamed19m/CAPL_Linter#readme"
Repository = "https://github.com/MohamedHamed19m/CAPL_Linter"
Issues = "https://github.com/MohamedHamed19m/CAPL_Linter/issues"
